--- a/wiki/Ошибки.md
+++ b/wiki/Ошибки.md
@@ -1,7 +1,7 @@
 # Ошибки
 
 В случае любой ошибки в `hooks.server.js` или в `fetch` ('TypeError: fetch failed') —
-error.html (шрифтом с засечками)
+**error.html** (шрифтом с засечками)
 
 Примеры:
 1. В load-функции `fetch` выбросил 'TypeError: fetch failed' -> '500 | Internal Error'
@@ -9,8 +9,8 @@ error.html (шрифтом с засечками)
 3. Ожидаемая ошибка `hooks.server.js` используя `throw 'Something'` -> '500 | Internal Error'
 4. Ожидаемая ошибка `hooks.server.js` используя `error(503, 'Service Unavailable')` -> '503 | Service Unavailable'
 
-Во всех остальных случаях (в т.ч. и над и внутри load-функции) —
-error.svelte (шрифтом без засечек)
+Во всех остальных случаях (в т.ч. и над и внутри load-функции) —    
+**error.svelte** (шрифтом без засечек)
 
 1. В load-функции вернулся текст (с любым http-статусом), а ожидалось `.json()` -> '500 | Internal Error'
 2. Непредвиденная ошибка -> '500 | Internal Error'
