--- a/wiki/Ошибки.md
+++ b/wiki/Ошибки.md
@@ -6,8 +6,8 @@
 **Примеры:**
 1. В load-функции `fetch` выбросил `TypeError: fetch failed` -> `500 | Internal Error`
 2. Непредвиденная ошибка `hooks.server.js` -> `500 | Internal Error`
-3. Ожидаемая ошибка `hooks.server.js` используя `throw `Something`` -> `500 | Internal Error`
-4. Ожидаемая ошибка `hooks.server.js` используя `error(503, `Service Unavailable`)` -> `503 | Service Unavailable`
+3. Ожидаемая ошибка `hooks.server.js` используя `throw 'Something'` -> `500 | Internal Error`
+4. Ожидаемая ошибка `hooks.server.js` используя `error(503, 'Service Unavailable')` -> `503 | Service Unavailable`
  
 ## error.svelte (шрифтом без засечек)
 Во всех остальных случаях (в т.ч. и над и внутри load-функции)
@@ -15,10 +15,10 @@
 **Примеры:**
 1. В load-функции вернулся текст (с любым http-статусом), а ожидалось `.json()` -> `500 | Internal Error`
 2. Непредвиденная ошибка -> `500 | Internal Error`
-3. Ожидаемая ошибка используя (в т.ч. над load-функ) `error(503, `Service Unavailable`)` -> `503 | Service Unavailable`
-4. Ожидаемая ошибка используя `throw `Something`` -> `500 | Internal Error`
+3. Ожидаемая ошибка используя (в т.ч. над load-функ) `error(503, 'Service Unavailable')` -> `503 | Service Unavailable`
+4. Ожидаемая ошибка используя `throw 'Something'` -> `500 | Internal Error`
 5. Роутер не нашёл шаблон -> `404 | Not Found`
 
 ---
 
-P.S. Указание `throw` в `throw error(503, `Service Unavailable`)` избыточно и ни на что не влияет.
+P.S. Указание `throw` в `throw error(503, 'Service Unavailable')` избыточно и ни на что не влияет.
