--- a/howto/Темы/Ошибки.md
+++ b/howto/Темы/Ошибки.md
@@ -15,7 +15,7 @@
 **Примеры:**
 1. В load-функции вернулся текст (с любым http-статусом), а ожидалось `.json()` -> `500 | Internal Error`
 2. Непредвиденная ошибка -> `500 | Internal Error`
-3. Ожидаемая ошибка используя (в т.ч. над load-функ) `error(503, 'Service Unavailable')` -> `503 | Service Unavailable`
+3. Ожидаемая ошибка используя (в т.ч. над load-функцией) `error(503, 'Service Unavailable')` -> `503 | Service Unavailable`
 4. Ожидаемая ошибка используя `throw 'Something'` -> `500 | Internal Error`
 5. Роутер не нашёл шаблон -> `404 | Not Found`
 
